Cambios en Inicio

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cesar Aquino Tello</title>
   </head>
-  <body>
-    <div id="root" class="bg-slate-200 dark:bg-slate-600 transition-colors duration-300 ease-linear"></div>
+  <body  class="bg-silver-100 dark:bg-[#1a2b2b] transition-colors duration-300 ease-linear">
+    <div id="root"></div>
     <script src="https://cdn.lordicon.com/lordicon.js"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
