--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cesar Aquino Tello</title>
   </head>
-  <body  class="bg-silver-200 dark:bg-[#1a2b2b]  transition-colors duration-300 ease-linear ">
+  <body  class="bg-silver-200 dark:bg-firefly-950  transition-colors duration-300 ease-linear ">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
