--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en" class="">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cesar Aquino Tello</title>
+    <title>Cesar I. Tello</title>
   </head>
   <body  class="bg-silver-200 dark:bg-firefly-950  transition-colors duration-300 ease-linear ">
     <div id="root"></div>
