--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en" class="">
   <head>
-    <meta property="og:image" content="/favicon.svg">
+    <meta property="og:image" content="https://res.cloudinary.com/drutrk0me/image/upload/v1712370367/kkscixwtzrtayri0oxoc.png">
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
